2006-10-07  higepon  <higepon@users.sourceforge.jp>

        * src/main.cpp: bug fix of read result size

        * test/FileServerTest.h: add read result size test case

2006-08-16  higepon  <higepon@users.sourceforge.jp>

        * src/FileServer.cpp: uppercase

2006-04-15  higepon  <higepon@users.sourceforge.jp>

    * Message.cpp : get pid from process name