@@ -1,3 +1,7 @@
+2007-01-20  higepon  <higepon@users.sourceforge.jp>
+
+        * src/ISO9660/ISO9660FileSystem.cpp (ISO9660FileSystem::read): patch from junjunn. if offset == 0 read directory to context->memory.
+
 2006-10-07  higepon  <higepon@users.sourceforge.jp>
 
         * src/main.cpp: bug fix of read result size
